<resources>
    <string name="app_name" translatable="false">Byheart</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="pile_name">Stack name</string>
    <string name="edit_pile">Edit stack</string>
    <string name="delete_pile">Delete stack</string>
    <string name="settings">Settings</string>
    <string name="confirm">Confirm</string>
    <string name="about">About</string>
    <string name="dark_mode">Dark mode</string>
    <string name="card_front">Card front</string>
    <string name="card_back">Card back</string>
    <string name="light_mode">Light mode</string>
    <string name="placeholder_text">What will you learn next?</string>
    <string name="add_a_card">Add a card</string>
    <string name="reverse_cards">Reverse cards</string>
    <string name="restart">Restart</string>
    <string name="shuffle_cards">Shuffle cards</string>
    <string name="pronounce_cards">Pronounce cards</string>
    <string name="multiple_choice_mode">Multiple choice</string>
    <string name="typed_mode">Typed mode</string>
    <string name="memory_mode">Memory mode</string>
    <string name="pile_image">Stack image</string>
    <string name="add_another_card">Add another card</string>
    <string name="language_cards_front">Language cards front:</string>
    <string name="language_cards_back">Language cards back:</string>
    <string name="slash" translatable="false">/</string>
    <string name="pronounce_text">Pronounce text</string>
    <string name="type_your_answer">Type your answer</string>
    <string name="go">GO</string>
    <string name="create_pile">Create stack</string>
    <string name="want_to_quit">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="add_card">Add card</string>
    <string name="edit_card">Edit card</string>
    <string name="about_description">Thank you for using this app! I made this because all modern flashcard apps are either bloated with ads, require a subscription or contain a lot of unnecessary features.</string>
    <string name="about_subtext">If you enjoy this app, consider doing the following:</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="buy_me_a_cup_of_coffee">Buy me a cup of coffee!</string>
    <string name="create_a_bug_report">Create a bug report</string>
    <string name="url_github_issue" translatable="false">https://github.com/Bryanx/byheart/issues/new</string>
    <string name="url_chat" translatable="false">https://t.me/byheartapp</string>
    <string name="privacy_policy_url" translatable="false">https://www.notion.so/bryanderidder/Privacy-Policy-4120cbe4c26848a68e448bf5613e3dd1</string>
    <string name="terms_and_conditions_url" translatable="false">https://www.notion.so/bryanderidder/Terms-and-Conditions-6e99b51a769149f7b1367069047d73aa</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="terms_and_conditions" translatable="false">Terms and Conditions</string>
    <string name="delete_confirm_stack">Are you sure you want to delete this stack?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="five_card_warning">You need at least 5 cards.</string>
    <string name="ok">Ok</string>
    <string name="play_store_url" translatable="false">https://play.google.com/store/apps/details?id=nl.bryanderidder.byheart</string>
    <string name="colorpicker" translatable="false">Colorpicker</string>
    <string name="color_swatch_description" translatable="false">color</string>
    <string name="color_swatch_description_selected">Selected color</string>
    <string name="select_card_color">Select card color</string>
    <string name="cards">CARDS</string>
    <string name="export_csv">Export CSV</string>
    <string name="import_csv">Import CSV</string>
    <string name="export_csv_summary">Export all cards in a comma separated file. This file can be openend in Microsoft Excel, Google Sheets, Apple Numbers, etc.</string>
    <string name="import_csv_summary">Import from Microsoft Excel, Google Sheets, Apple Numbers, or use this to import your flashcards from a different app.</string>
    <string name="create_backup_summary">Create a backup file of your data. You can open this file on another device to restore your data.</string>
    <string name="import_backup_summary">Import a backup file. Existings stacks and cards wont be overwritten by the backup.</string>
    <string name="coming_soon">Coming soon.</string>
    <string name="reminders">Reminders</string>
    <string name="account">Account</string>
    <string name="create_backup">Create backup</string>
    <string name="import_backup">Import backup</string>
    <string name="import_and_export">Import and export</string>
    <string name="support">Support</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="removed_card">Deleted card</string>
    <string name="reordered_cards">Reordered cards</string>
    <string name="created_stack">Created stack</string>
    <string name="updated_stack">Updated stack</string>
    <string name="deleted_stack">Deleted stack</string>
    <string name="updated_card">Updated card</string>
    <string name="created_card">Created card</string>
    <string name="field_may_not_be_blank">Field may not be blank</string>
    <string name="memory_mode_description">Practice by yourself. Check whether you were thinking of the correct answer.</string>
    <string name="multiple_choice_mode_description">Pick the right answer out of four different cards.</string>
    <string name="typed_mode_description">Type the correct answer for each card.</string>
    <string name="start_rehearsal">Start practicing</string>
    <string name="start">Start</string>
    <string name="pile_same_name">You already have a pile with the same name.</string>
    <string name="correct">Correct</string>
    <string name="sort">Sort</string>
    <string name="by_front_text">By front text</string>
    <string name="by_back_text">By back text</string>
    <string name="by_score">By score</string>
    <string name="you_dont_have_any_cards_yet">You have no cards yet.</string>
    <string name="flip_icon" translatable="false">Flip icon</string>
    <string name="pronounce_icon" translatable="false">Pronounce icon</string>
    <string name="shuffle_icon" translatable="false">Shuffle icon</string>
    <string name="repeat_icon" translatable="false">Repeat icon</string>
    <string name="repeat_wrong_answers">Repeat wrong answers</string>
    <string name="where_do_you_want_to_move_this_card">Where do you want to move this card?</string>
    <string name="move">Move</string>
    <string name="telegram_group_chat" translatable="false">Telegram group chat</string>
    <string name="chat_summary" translatable="false">For requests, bugs or feedback please join our group chat here (English only).</string>
    <string name="share_stack_message">This will generate a public link to this stack. Anyone with the link can copy this stack.</string>
    <string name="share_public_link">Share public link</string>
    <string name="make_stack_public">Make stack public</string>
    <string name="update_public_stack">Update public stack</string>
    <string name="share_stack">Share stack</string>
    <string name="my_card_stacks">My card stacks</string>
    <string name="card_was_moved">Card was moved.</string>
    <string name="stack_is_public">Stack is public</string>
    <string name="sign_out">Sign out</string>
    <string name="after_logging_in_you_will_be_able_to_share_cards">After logging in you will be able to share cards.</string>
    <string name="welcome_back_name">Welcome back %1$s</string>
    <string name="share_block_login_message">In order to share your cards you need to create an account. Alternatively you can export a CSV file and share that file.</string>
    <string name="read_terms_and_conditions">Read terms and conditions</string>
    <string name="agree_terms">I agree with the terms and conditions</string>
    <string name="medal" translatable="false">Medal</string>
    <string name="perfection">Perfection</string>
    <string name="amazing">Amazing</string>
    <string name="well_done">Well done</string>
    <string name="keep_going">Keep going</string>
    <string name="nice_work">Nice work</string>
    <string name="not_bad">Not bad</string>
    <string name="keep_learning">Keep learning</string>
    <string name="hang_in_there">Hang in there</string>
    <string name="stay_focused">Stay focused</string>
    <string name="you_can_do_it">You can do it</string>
    <string name="pretty_bad">Pretty bad</string>
    <string name="score">Score</string>
    <string name="grade">Grade</string>
    <string name="time">Time</string>
    <string name="try_again">Try again</string>
    <string name="rehearsals">Rehearsals</string>
</resources>
