<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:gravity="start"
    android:orientation="vertical">

    <TextView
        android:id="@+id/crsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/start_rehearsal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/switch1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/switch1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/switch2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/flip_icon"
            android:src="@drawable/ic_flip_24dp"
            android:tint="?mainTextColor" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/crsReverse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/reverse_cards"
            android:textColor="?mainTextColor"
            android:theme="@style/AppTheme" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/switch2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/switch3"
        app:layout_constraintEnd_toEndOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="@+id/switch1">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/pronounce_icon"
            android:src="@drawable/ic_volume_up_black_24dp"
            android:tint="?mainTextColor" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/crsPronounce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/pronounce_cards"
            android:textColor="?mainTextColor"
            android:theme="@style/AppTheme" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/switch3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/switch4"
        app:layout_constraintEnd_toEndOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="@+id/switch1">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/shuffle_icon"
            android:src="@drawable/ic_random_24dp"
            android:tint="?mainTextColor" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/crsShuffle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/shuffle_cards"
            android:textColor="?mainTextColor"
            android:theme="@style/AppTheme" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/switch4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/toggleGroup"
        app:layout_constraintEnd_toEndOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="@+id/switch1">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/repeat_icon"
            android:src="@drawable/ic_replay_black_24dp"
            android:tint="?mainTextColor" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/crsRepeatWrong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/repeat_wrong_answers"
            android:textColor="?mainTextColor"
            android:theme="@style/AppTheme" />

    </LinearLayout>


    <nl.bryanderidder.byheart.shared.views.ThemedButtonGroup
        android:id="@+id/toggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/crsModeDescription">

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25" />

        <nl.bryanderidder.byheart.shared.views.ThemedButton
            android:id="@+id/btnMultipleChoice"
            android:layout_width="0dp"
            android:layout_height="155dp"
            android:layout_weight="1"
            app:backgroundColor="?dialogBackgroundButton"
            app:elevation="0dp"
            app:icon="@drawable/ic_check_circle_outline_24px"
            app:text="@string/multiple_choice_mode" />

        <nl.bryanderidder.byheart.shared.views.ThemedButton
            android:id="@+id/btnTyped"
            android:layout_width="0dp"
            android:layout_height="155dp"
            android:layout_weight="1"
            app:backgroundColor="?dialogBackgroundButton"
            app:elevation="0dp"
            app:icon="@drawable/ic_spellcheck_24px"
            app:text="@string/typed_mode" />

        <nl.bryanderidder.byheart.shared.views.ThemedButton
            android:id="@+id/btnMemory"
            android:layout_width="0dp"
            android:layout_height="155dp"
            android:layout_weight="1"
            app:backgroundColor="?dialogBackgroundButton"
            app:elevation="0dp"
            app:icon="@drawable/ic_brain"
            app:text="@string/memory_mode" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25" />

    </nl.bryanderidder.byheart.shared.views.ThemedButtonGroup>

    <TextView
        android:id="@+id/crsModeDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/memory_mode_description"
        android:textAlignment="center"
        android:textColor="?mainTextColor"
        android:lines="2"
        app:layout_constraintBottom_toTopOf="@+id/crsStart"
        app:layout_constraintEnd_toEndOf="@+id/switch1"
        app:layout_constraintStart_toStartOf="@+id/switch1" />

    <nl.bryanderidder.byheart.shared.views.ThemedButton
        android:id="@+id/crsStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        app:backgroundColor="?dialogBackgroundButton"
        app:elevation="0dp"
        app:text="@string/start"
        app:textColor="?dialogButtonIconColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
