<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:gravity="start"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/crrMedal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_medal_gold"
        android:scaleType="fitCenter"
        android:contentDescription="@string/medal"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_max="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/crrPileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textColor="?mainTextColor"
        android:text="@string/pile_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crrMedal" />

    <TextView
        android:id="@+id/crrTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/perfection"
        android:textColor="?mainHeaderTextColor"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crrPileName" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?mainTextColor"
        android:text="@string/score"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/crrScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?mainHeaderTextColor"
        android:text="12/65"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textColor="?mainTextColor"
        android:text="@string/grade"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/crrTitle" />

    <TextView
        android:id="@+id/crrScorePercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?mainHeaderTextColor"
        android:text="23%"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?mainTextColor"
        android:text="@string/time"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/crrElapsedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?mainHeaderTextColor"
        android:text="5:00"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="?actionBarSize" />
</androidx.constraintlayout.widget.ConstraintLayout>
